--- a/personalWebsite/contact.html
+++ b/personalWebsite/contact.html
@@ -25,7 +25,7 @@
             <div id="social">
                 <a href="https://m.facebook.com/naveen.mishra.562329" target="blank" class="fa fa-facebook"></a>
                 <a href="https://www.instagram.com/cape_nv/" target="blank" class="fa fa-instagram"></a> 
-                <a href="https://www.linkedin.com/in/naveenmishra/" target="blank" class="fa fa-linkedin"></a> 
+                <a href="https://www.linkedin.com/in/naveen-mishra-488300159/" class="fa fa-linkedin"></a> 
             </div>
         </div>
         
